--- a/Historical Places In India.html
+++ b/Historical Places In India.html
@@ -239,7 +239,7 @@
           <p class="float-end mb-1">
             <a href="#">Back to top</a>
           </p>
-          <p class="mb-1 ">Designed And Developed By Ayushi Patel</p>
+          <p class="mb-1 ">Designed And Developed By Ashish Tiwari</p>
 
         </div>
       </footer>
